@@ -1,3 +1,8 @@
+2009-07-17  vadim  <vadim@vk.crocodile.org>
+
+	* Resources.cpp (Resources::getResourceStrList): This function
+	provides a way to create lists of parameters in resource files.
+
 2009-07-16  vadim  <vadim@vk.crocodile.org>
 
 	* FWObjectDatabase_11.xslt: Bumped data file format to 12; system
